# github-mcp-server

./: .gitignore  Cargo.toml  README.md
.kiro/specs/github-mcp-server/: design.md  requirements.md  tasks.md
src/: auth.rs  config.rs  error.rs  github.rs  lib.rs  logging.rs  main.rs  mcp.rs  models.rs
src/github/: client.rs
src/mcp/: handler.rs  tools.rs
