[package]
name = "github-mcp-server"
version = "0.1.0"
edition = "2021"
description = "A Model Context Protocol (MCP) server for GitHub integration"
authors = ["mg3994 <manishgautammg7@yahoo.com>"]
license = "MIT"
repository = "https://github.com/mg3994/github-mcp-server"

[[bin]]
name = "github-mcp-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
base64 = "0.21"
url = "2.0"
uuid = { version = "1.0", features = ["v4"] }
urlencoding = "2.1"

[dev-dependencies]
mockito = "1.0"
tokio-test = "0.4"
tempfile = "3.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"